--- a/AzureFunctionsPGPEncrypt/AzureFunctionsPGPEncrypt.csproj
+++ b/AzureFunctionsPGPEncrypt/AzureFunctionsPGPEncrypt.csproj
@@ -4,6 +4,8 @@
 		<AzureFunctionsVersion>v3</AzureFunctionsVersion>
 	</PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="4.0.5" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
     <PackageReference Include="PgpCore" Version="2.4.2" />
   </ItemGroup>
